build: add java_opts and --no_home to gradlew clean war build command